--- a/src/i18n/locales/hi.json
+++ b/src/i18n/locales/hi.json
@@ -434,6 +434,53 @@
       "rateLimited": "बहुत अधिक अनुरोध। कृपया थोड़ा इंतजार करें।",
       "processingFailed": "CV प्रोसेस नहीं हो पाया।",
       "unknown": "अज्ञात त्रुटि।"
+    },
+    "customize": {
+      "title": "???? ?? ????????? ????",
+      "subtitle": "?????, ????????, ????? ?? ??? ????? ???? ????? CV ???? ??????",
+      "layout": {
+        "label": "????? ??????",
+        "4xl": "?????????",
+        "5xl": "???????",
+        "6xl": "????"
+      },
+      "density": {
+        "label": "?????? ?????",
+        "compact": "?????????",
+        "comfortable": "????????"
+      },
+      "cardStyle": {
+        "label": "????? ????",
+        "solid": "?????",
+        "glass": "?????"
+      },
+      "accent": {
+        "label": "??????? ???",
+        "blue": "????",
+        "emerald": "???????",
+        "amber": "????",
+        "violet": "??????"
+      },
+      "sections": {
+        "label": "??????",
+        "hero": "????",
+        "about": "?????",
+        "skills": "????",
+        "experience": "?????",
+        "education": "??????",
+        "projects": "??????????",
+        "certificates": "??????????",
+        "languages": "??????"
+      },
+      "actions": {
+        "visible": "????? ?? ???",
+        "hidden": "????",
+        "show": "??????",
+        "hide": "??????",
+        "moveUp": "???",
+        "moveDown": "????",
+        "reset": "?????"
+      }
     }
   }
 }
