--- a/src/i18n/locales/ar.json
+++ b/src/i18n/locales/ar.json
@@ -434,6 +434,53 @@
       "rateLimited": "طلبات كثيرة جدًا. يرجى الانتظار قليلًا.",
       "processingFailed": "تعذر معالجة السيرة الذاتية.",
       "unknown": "خطأ غير معروف."
+    },
+    "customize": {
+      "title": "????? ????? ????????",
+      "subtitle": "???? ??????? ????????? ????????? ???????? ???? ????? ????? ???????.",
+      "layout": {
+        "label": "??? ???????",
+        "4xl": "?????",
+        "5xl": "??????",
+        "6xl": "????"
+      },
+      "density": {
+        "label": "????? ???????",
+        "compact": "??????",
+        "comfortable": "?????"
+      },
+      "cardStyle": {
+        "label": "??? ????????",
+        "solid": "????",
+        "glass": "??????"
+      },
+      "accent": {
+        "label": "??? ???????",
+        "blue": "????",
+        "emerald": "?????",
+        "amber": "???????",
+        "violet": "??????"
+      },
+      "sections": {
+        "label": "???????",
+        "hero": "???????",
+        "about": "????",
+        "skills": "????????",
+        "experience": "???????",
+        "education": "???????",
+        "projects": "????????",
+        "certificates": "????????",
+        "languages": "??????"
+      },
+      "actions": {
+        "visible": "????",
+        "hidden": "????",
+        "show": "?????",
+        "hide": "?????",
+        "moveUp": "????",
+        "moveDown": "????",
+        "reset": "????? ???"
+      }
     }
   }
 }
