--- a/src/i18n/locales/ja.json
+++ b/src/i18n/locales/ja.json
@@ -434,6 +434,53 @@
       "rateLimited": "リクエストが多すぎます。少し待ってから再試行してください。",
       "processingFailed": "履歴書を処理できませんでした。",
       "unknown": "不明なエラー。"
+    },
+    "customize": {
+      "title": "?????????",
+      "subtitle": "????????????????????????CV????????????",
+      "layout": {
+        "label": "??????",
+        "4xl": "?????",
+        "5xl": "????",
+        "6xl": "???"
+      },
+      "density": {
+        "label": "????",
+        "compact": "?????",
+        "comfortable": "??"
+      },
+      "cardStyle": {
+        "label": "???????",
+        "solid": "????",
+        "glass": "???"
+      },
+      "accent": {
+        "label": "????????",
+        "blue": "???",
+        "emerald": "?????",
+        "amber": "????",
+        "violet": "??????"
+      },
+      "sections": {
+        "label": "?????",
+        "hero": "????",
+        "about": "??",
+        "skills": "???",
+        "experience": "??",
+        "education": "??",
+        "projects": "??????",
+        "certificates": "??",
+        "languages": "??"
+      },
+      "actions": {
+        "visible": "???",
+        "hidden": "???",
+        "show": "??",
+        "hide": "???",
+        "moveUp": "??",
+        "moveDown": "??",
+        "reset": "????"
+      }
     }
   }
 }
