--- a/src/i18n/locales/zh.json
+++ b/src/i18n/locales/zh.json
@@ -434,6 +434,53 @@
       "rateLimited": "请求过多，请稍后再试。",
       "processingFailed": "无法处理简历。",
       "unknown": "未知错误。"
+    },
+    "customize": {
+      "title": "?????",
+      "subtitle": "?????????????????????????",
+      "layout": {
+        "label": "????",
+        "4xl": "??",
+        "5xl": "??",
+        "6xl": "??"
+      },
+      "density": {
+        "label": "????",
+        "compact": "??",
+        "comfortable": "??"
+      },
+      "cardStyle": {
+        "label": "????",
+        "solid": "??",
+        "glass": "??"
+      },
+      "accent": {
+        "label": "???",
+        "blue": "??",
+        "emerald": "???",
+        "amber": "??",
+        "violet": "??"
+      },
+      "sections": {
+        "label": "??",
+        "hero": "???",
+        "about": "??",
+        "skills": "??",
+        "experience": "??",
+        "education": "??",
+        "projects": "??",
+        "certificates": "??",
+        "languages": "??"
+      },
+      "actions": {
+        "visible": "??",
+        "hidden": "??",
+        "show": "??",
+        "hide": "??",
+        "moveUp": "??",
+        "moveDown": "??",
+        "reset": "????"
+      }
     }
   }
 }
