feat: enhance personal CV experience and certificates

--- a/src/i18n/locales/ar.json
+++ b/src/i18n/locales/ar.json
@@ -132,7 +132,10 @@
       "careers": "الدرجات الجارية",
       "certifications": "الشهادات",
       "english": "مستوى الإنجليزية"
-    }
+    },
+    "linkedinLabel": "LinkedIn",
+    "linkedinTitle": "??????? ??? LinkedIn",
+    "linkedinDescription": "???? ??????? ????????? ????????? ???????."
   },
   "footer": {
     "rights": "جميع الحقوق محفوظة.",
@@ -181,9 +184,9 @@
     "error": "حدث خطأ أثناء الحصول على الإجابة. حاول مرة أخرى.",
     "suggestions": {
       "skills": [
-        "لماذا اخترت التخصص في الذكاء الاصطناعي؟",
-        "ما هي أقوى مهارة لديك؟",
-        "كيف تعلمت هذه التقنيات؟"
+        "??? ????? ??? ???????? ?? ??????? ?????????",
+        "??? ???? ??????? ?? ?????? ????????? ????????? ?????? ?????",
+        "?? ????? ?? ????? ?? ????? ??????"
       ],
       "projects": [
         "ما أكبر تحدٍ في مشروع Conecta Panamá؟",
@@ -196,9 +199,9 @@
         "ما نوع العمل الذي تبحث عنه؟"
       ],
       "education": [
-        "لماذا تدرس تخصصين؟",
-        "كيف تجمع بين الذكاء الاصطناعي والهندسة الصناعية؟",
-        "ما أهدافك الأكاديمية؟"
+        "????? ?? ????? ????????.",
+        "????? ????? ????? ?????? ??????????",
+        "???? ????? ?? ??????? ?????????"
       ]
     }
   },
@@ -482,5 +485,12 @@
         "reset": "????? ???"
       }
     }
+  },
+  "intro": {
+    "title": "????? ?????? ?????????",
+    "subtitle": "???? ???? ??????? ?????? ?????? ?????? ?????.",
+    "cta": "??? ???????",
+    "loadingTitle": "????? ????? ??????",
+    "progressLabel": "??????: {progress}%"
   }
 }
