--- a/src/i18n/locales/hi.json
+++ b/src/i18n/locales/hi.json
@@ -132,7 +132,10 @@
       "careers": "जारी डिग्रीज",
       "certifications": "प्रमाणपत्र",
       "english": "अंग्रेजी स्तर"
-    }
+    },
+    "linkedinLabel": "LinkedIn",
+    "linkedinTitle": "LinkedIn ?? ?????? ????",
+    "linkedinDescription": "???? ???????????, ??????? ?? ???? ????? ??????"
   },
   "footer": {
     "rights": "सर्वाधिकार सुरक्षित।",
@@ -181,9 +184,9 @@
     "error": "उत्तर प्राप्त करने में त्रुटि हुई। कृपया पुनः प्रयास करें।",
     "suggestions": {
       "skills": [
-        "आपने AI में विशेषज्ञता क्यों चुनी?",
-        "आपकी सबसे मजबूत कौशल क्या है?",
-        "आपने ये तकनीकें कैसे सीखीं?"
+        "?? ?????? ?? ?? ??????????? ??????????? ??? ???? ???? ???????",
+        "AI ?? ?????? ??????? ??????? ???? ????? ?????? ????",
+        "?? ???? ?? ???????? ????????? ??? ???? ????? ???"
       ],
       "projects": [
         "Conecta Panamá में सबसे बड़ी चुनौती क्या थी?",
@@ -196,9 +199,9 @@
         "आप किस प्रकार का काम ढूंढ रहे हैं?"
       ],
       "education": [
-        "आप दो डिग्री क्यों पढ़ रहे हैं?",
-        "आप AI और Industrial Engineering को कैसे जोड़ते हैं?",
-        "आपके शैक्षणिक लक्ष्य क्या हैं?"
+        "???? ????? ?????? ?? ???? ??? ??????",
+        "???? AI ?????? ?????? ????? ?????",
+        "??????????? ??????????? ?? ???? ???? ?????"
       ]
     }
   },
@@ -482,5 +485,12 @@
         "reset": "?????"
       }
     }
+  },
+  "intro": {
+    "title": "?????????? CV ?????? ????",
+    "subtitle": "????? ???? ???? ?? ???? ??????? ??? ???? ?? ??? ??? ?????",
+    "cta": "??? ???? ????",
+    "loadingTitle": "????????? ??????? ?? ??? ??",
+    "progressLabel": "??????: {progress}%"
   }
 }
