--- a/src/i18n/locales/ja.json
+++ b/src/i18n/locales/ja.json
@@ -132,7 +132,10 @@
       "careers": "在学中の学位",
       "certifications": "資格",
       "english": "英語レベル"
-    }
+    },
+    "linkedinLabel": "LinkedIn",
+    "linkedinTitle": "LinkedIn?????????",
+    "linkedinDescription": "????????????????????????"
   },
   "footer": {
     "rights": "全著作権所有。",
@@ -181,9 +184,9 @@
     "error": "回答の取得に失敗しました。もう一度お試しください。",
     "suggestions": {
       "skills": [
-        "なぜAIを専門に選んだのですか？",
-        "最も強いスキルは何ですか？",
-        "これらの技術はどうやって学びましたか？"
+        "??????????????????????",
+        "AI/???????????????????????????",
+        "?????????????????"
       ],
       "projects": [
         "Conecta Panamáで最大の課題は何でしたか？",
@@ -196,9 +199,9 @@
         "どのような仕事を探していますか？"
       ],
       "education": [
-        "なぜ2つの学位を学んでいるのですか？",
-        "AIと産業工学をどう組み合わせていますか？",
-        "学術的な目標は何ですか？"
+        "????????????????",
+        "??AI?????????????",
+        "????????????????????"
       ]
     }
   },
@@ -482,5 +485,12 @@
         "reset": "????"
       }
     }
+  },
+  "intro": {
+    "title": "????????CV???",
+    "subtitle": "????????????CV???????????",
+    "cta": "??????",
+    "loadingTitle": "???????????",
+    "progressLabel": "?????{progress}%"
   }
 }
