--- a/src/i18n/locales/ko.json
+++ b/src/i18n/locales/ko.json
@@ -132,7 +132,10 @@
       "careers": "진행 중인 학위",
       "certifications": "자격증",
       "english": "영어 수준"
-    }
+    },
+    "linkedinLabel": "LinkedIn",
+    "linkedinTitle": "LinkedIn?? ????",
+    "linkedinDescription": "????? ???, ?? ??? ?????."
   },
   "footer": {
     "rights": "모든 권리 보유.",
@@ -181,9 +184,9 @@
     "error": "응답을 가져오는 중 오류가 발생했습니다. 다시 시도하세요.",
     "suggestions": {
       "skills": [
-        "왜 AI를 전공으로 선택했나요?",
-        "가장 강한 기술은 무엇인가요?",
-        "이 기술들을 어떻게 배웠나요?"
+        "? ??? ???? ??? ??? ??????",
+        "AI/??? ?? ??? ?? ??? ?????",
+        "? ??? ?? ?????? ?? ??? ????"
       ],
       "projects": [
         "Conecta Panamá에서 가장 큰 도전은 무엇이었나요?",
@@ -196,9 +199,9 @@
         "어떤 종류의 일을 찾고 있나요?"
       ],
       "education": [
-        "왜 두 개의 학위를 공부하나요?",
-        "AI와 산업공학을 어떻게 결합하나요?",
-        "학업 목표는 무엇인가요?"
+        "???? ??? ??? ???.",
+        "? AI ?? ??? ??????",
+        "????? ???? ?? ??? ??????"
       ]
     }
   },
@@ -482,5 +485,12 @@
         "reset": "???"
       }
     }
+  },
+  "intro": {
+    "title": "????? CV ??",
+    "subtitle": "??? ??? ???? ?? CV ??? ?????.",
+    "cta": "?? ??",
+    "loadingTitle": "??? ??? ?",
+    "progressLabel": "???: {progress}%"
   }
 }
