--- a/src/i18n/locales/zh.json
+++ b/src/i18n/locales/zh.json
@@ -132,7 +132,10 @@
       "careers": "在读学位",
       "certifications": "证书",
       "english": "英语水平"
-    }
+    },
+    "linkedinLabel": "LinkedIn",
+    "linkedinTitle": "? LinkedIn ????",
+    "linkedinDescription": "???????????????"
   },
   "footer": {
     "rights": "版权所有。",
@@ -181,9 +184,9 @@
     "error": "获取回复时出错。请重试。",
     "suggestions": {
       "skills": [
-        "你为什么选择专注于AI？",
-        "你最强的技能是什么？",
-        "你是如何学习这些技术的？"
+        "?????????????????",
+        "?? AI ??????????????",
+        "????????????????"
       ],
       "projects": [
         "Conecta Panamá 最大的挑战是什么？",
@@ -196,9 +199,9 @@
         "你在寻找什么类型的工作？"
       ],
       "education": [
-        "你为什么要学习两个学位？",
-        "你如何将AI与工业工程结合？",
-        "你的学术目标是什么？"
+        "???????????",
+        "????? AI ?????",
+        "????????????"
       ]
     }
   },
@@ -482,5 +485,12 @@
         "reset": "????"
       }
     }
+  },
+  "intro": {
+    "title": "??????",
+    "subtitle": "????????????????",
+    "cta": "????",
+    "loadingTitle": "?????",
+    "progressLabel": "???{progress}%"
   }
 }
